src/objects/Bundle__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be checked if the is bundle active.</description>
        <inlineHelpText>This field should be checked if the is bundle active.</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Puritan&apos;s Pride</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Vitamin World</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perfectly Pure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bundle_Price__c</fullName>
        <label>Bundle Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bundle_Selling_Points__c</fullName>
        <label>Bundle Selling Points</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>Image to represent the bundle offer.</description>
        <inlineHelpText>Paste in an image to represent the bundle offer.</inlineHelpText>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Bundles</relationshipLabel>
        <relationshipName>Bundles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Bundle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Start_End_Date</fullName>
        <active>true</active>
        <description>The Bundle&apos;s End Date cannot be before the Start Date.</description>
        <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>The Bundle&apos;s Start Date cannot be earlier than the End Date</errorMessage>
    </validationRules>
</CustomObject>